Added history states to pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -991,7 +991,10 @@ main {
   100% { transform: scale(1); }
 }
 
-.project-item > a { width: 100%; }
+.project-item > a { 
+	width: 100%;
+	cursor: pointer;
+}
 
 .project-img {
   position: relative;
